fixed carousel on mobile hopefully

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ h1#projects {
 
 ul#carousel {
     width: 60vw;
-    height: 20vw;
+    height: 30vh;
     padding: 20px;
     padding-top: 2px;
     display: flex;
